--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@babel/core": "^7.7.4",
+    "@ngxs/store": "^3.5.1",
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addon-notes": "^5.2.8",
